Webpack and ts configurations to successfully compile app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,11 @@
     "strict": true,
     "sourceMap": true,
     "target": "esnext",
+    "allowImportingTsExtensions": true,
+    "noEmit": true
   },
   "exclude": [
     "node_modules"
   ]
+  
 }
