--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "tingztaker",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "tingztaker",
+  "main": "./src/index.tsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server .",
     "build": "NODE_ENV=production webpack"
   },
   "keywords": [],
-  "author": "",
+  "author": "Kathleen",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.20.7",
@@ -19,6 +19,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "babel-loader": "^9.1.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
