--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "tingztaker",
   "main": "./src/index.tsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "react-scripts test --watchAll",
+    "test:coverage": "react-scripts test --coverage --watchAll",
     "start": "webpack-dev-server .",
     "build": "NODE_ENV=production webpack"
   },
@@ -16,12 +17,34 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.57",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
+    "@types/testing-library__jest-dom": "5.14.5",
+    "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "babel-loader": "^9.1.2",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "^7.31.7",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-simple-import-sort": "8.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.0.6",
+    "jest-mock": "^29.0.2",
+    "jest-styled-components": "^7.1.1",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^5.3.6",
+    "ts-jest": "^27.0.2",
     "ts-loader": "^9.4.2",
+    "ts-node": "10.9.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
