--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jest-mock": "^29.0.2",
     "jest-styled-components": "^7.1.1",
     "react-scripts": "^5.0.1",
+    "react-uuid": "^2.0.0",
     "styled-components": "^5.3.6",
     "ts-jest": "^27.0.2",
     "ts-loader": "^9.4.2",
